Addition of ability to map Tor proxy into the container

--- a/23/alpine/Dockerfile
+++ b/23/alpine/Dockerfile
@@ -128,12 +128,17 @@ RUN apk --no-cache add \
   sqlite-dev \
   libevent \
   libzmq \
-  su-exec
+  socat \
+  sudo \
+  tini
 
 ENV BITCOIN_DATA=/home/bitcoin/.bitcoin
 ENV BITCOIN_VERSION=23.0
 ENV BITCOIN_PREFIX=/opt/bitcoin-${BITCOIN_VERSION}
 ENV PATH=${BITCOIN_PREFIX}/bin:$PATH
+
+ENV TOR_SOCKSD=""
+ENV TOR_CTRLD=""
 
 COPY --from=bitcoin-core /opt /opt
 COPY docker-entrypoint.sh /entrypoint.sh
@@ -142,8 +147,8 @@ VOLUME ["/home/bitcoin/.bitcoin"]
 
 EXPOSE 8332 8333 18332 18333 18444
 
-ENTRYPOINT ["/entrypoint.sh"]
-
-RUN bitcoind -version | grep "Bitcoin Core version v${BITCOIN_VERSION}"
+ENTRYPOINT ["/sbin/tini", "--", "/entrypoint.sh"]
 
 CMD ["bitcoind"]
+
+RUN bitcoind -version | grep "Bitcoin Core version v${BITCOIN_VERSION}"
