Catching up with upstream

--- a/23/alpine/Dockerfile
+++ b/23/alpine/Dockerfile
@@ -127,9 +127,12 @@ RUN apk --no-cache add \
   boost-thread \
   sqlite-dev \
   libevent \
+  shadow \
+  sqlite \
   sqlite-dev \
   libzmq \
   socat \
+  su-exec \
   sudo \
   tini
 
