--- a/22/alpine/Dockerfile
+++ b/22/alpine/Dockerfile
@@ -43,21 +43,23 @@ RUN apk --no-cache add sqlite-dev
 RUN apk --no-cache add zeromq-dev
 RUN set -ex \
   && for key in \
-    0CCBAAFD76A2ECE2CCD3141DE2FFD5B1D88CA97D \
-    152812300785C96444D3334D17565732E08E5E41 \
-    0AD83877C1F0CD1EE9BD660AD7CC770B81FD22A8 \
-    590B7292695AFFA5B672CBB2E13FC145CD3F4304 \
-    28F5900B1BB5D1A4B6B6D1A9ED357015286A333D \
-    637DB1E23370F84AFF88CCE03152347D07DA627C \
-    CFB16E21C950F67FA95E558F2EEB9F5CC09526C1 \
-    6E01EEC9656903B0542B8F1003DB6322267C373B \
-    D1DBF2C4B96F2DEBF4C16654410108112E7EA81F \
-    82921A4B88FD454B7EB8CE3C796C4109063D4EAF \
-    9DEAE0DC7063249FB05474681E4AED62986CD25D \
-    9D3CC86A72F8494342EA5FD10A41BDC3F4FAFF1C \
-    74E2DEF5D77260B98BC19438099BAD163C70FBFA \
+       0AD83877C1F0CD1EE9BD660AD7CC770B81FD22A8 \
+       152812300785C96444D3334D17565732E08E5E41 \
+       287AE4CA1187C68C08B49CB2D11BD4F33F1DB499 \
+       28E72909F1717FE9607754F8A7BEB2621678D37D \
+       3EB0DEE6004A13BE5A0CC758BF2978B068054311 \
+       590B7292695AFFA5B672CBB2E13FC145CD3F4304 \
+       637DB1E23370F84AFF88CCE03152347D07DA627C \
+       6A8F9C266528E25AEB1D7731C2371D91CB716EA7 \
+       79D00BAC68B56D422F945A8F8E3A8F3247DBCBBF \
+       9DEAE0DC7063249FB05474681E4AED62986CD25D \
+       CFB16E21C950F67FA95E558F2EEB9F5CC09526C1 \
+       D1DBF2C4B96F2DEBF4C16654410108112E7EA81F \
+       ED9BDF7AD6A55E232E84524257FF9BDBCC301009 \
+       F4FC70F07310028424EFC20A8E4256593F177720 \
   ; do \
     gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key" || \
+    gpg --batch --keyserver hkps://api.protonmail.ch --recv-keys "$key" || \
     gpg --batch --keyserver keys.openpgp.org --recv-keys "$key" || \
     gpg --batch --keyserver keyserver.pgp.com --recv-keys "$key" || \
     gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
