--- a/23/alpine/Dockerfile
+++ b/23/alpine/Dockerfile
@@ -43,24 +43,21 @@ RUN apk --no-cache add sqlite-dev
 RUN apk --no-cache add zeromq-dev
 RUN set -ex \
   && for key in \
-    152812300785C96444D3334D17565732E08E5E41 \
-    0AD83877C1F0CD1EE9BD660AD7CC770B81FD22A8 \
-    590B7292695AFFA5B672CBB2E13FC145CD3F4304 \
-    28F5900B1BB5D1A4B6B6D1A9ED357015286A333D \
-    637DB1E23370F84AFF88CCE03152347D07DA627C \
-    CFB16E21C950F67FA95E558F2EEB9F5CC09526C1 \
-    F4FC70F07310028424EFC20A8E4256593F177720 \
-    D1DBF2C4B96F2DEBF4C16654410108112E7EA81F \
-    287AE4CA1187C68C08B49CB2D11BD4F33F1DB499 \
-    F9A8737BF4FF5C89C903DF31DD78544CF91B1514 \
-    9DEAE0DC7063249FB05474681E4AED62986CD25D \
-    E463A93F5F3117EEDE6C7316BD02942421F4889F \
-    9D3CC86A72F8494342EA5FD10A41BDC3F4FAFF1C \
-    4DAF18FE948E7A965B30F9457E296D555E7F63A7 \
-    28E72909F1717FE9607754F8A7BEB2621678D37D \
-    74E2DEF5D77260B98BC19438099BAD163C70FBFA \
+       0AD83877C1F0CD1EE9BD660AD7CC770B81FD22A8 \
+       152812300785C96444D3334D17565732E08E5E41 \
+       28E72909F1717FE9607754F8A7BEB2621678D37D \
+       637DB1E23370F84AFF88CCE03152347D07DA627C \
+       670BC460DC8BF5EEF1C3BC74B14CC9F833238F85 \
+       6A8F9C266528E25AEB1D7731C2371D91CB716EA7 \
+       C060A6635913D98A3587D7DB1C2491FFEB0EF770 \
+       CFB16E21C950F67FA95E558F2EEB9F5CC09526C1 \
+       D1DBF2C4B96F2DEBF4C16654410108112E7EA81F \
+       ED9BDF7AD6A55E232E84524257FF9BDBCC301009 \
+       F19F5FF2B0589EC341220045BA03F4DBE0C63FB4 \
+       F4FC70F07310028424EFC20A8E4256593F177720 \
   ; do \
     gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key" || \
+    gpg --batch --keyserver hkps://api.protonmail.ch --recv-keys "$key" || \
     gpg --batch --keyserver keys.openpgp.org --recv-keys "$key" || \
     gpg --batch --keyserver keyserver.pgp.com --recv-keys "$key" || \
     gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
