--- a/24/alpine/Dockerfile
+++ b/24/alpine/Dockerfile
@@ -45,20 +45,22 @@ RUN apk --no-cache add sqlite-dev
 RUN apk --no-cache add zeromq-dev
 RUN set -ex \
   && for key in \
-       152812300785C96444D3334D17565732E08E5E41 \
        0AD83877C1F0CD1EE9BD660AD7CC770B81FD22A8 \
-       590B7292695AFFA5B672CBB2E13FC145CD3F4304 \
-       CFB16E21C950F67FA95E558F2EEB9F5CC09526C1 \
-       F4FC70F07310028424EFC20A8E4256593F177720 \
-       D1DBF2C4B96F2DEBF4C16654410108112E7EA81F \
-       287AE4CA1187C68C08B49CB2D11BD4F33F1DB499 \
-       9DEAE0DC7063249FB05474681E4AED62986CD25D \
-       3EB0DEE6004A13BE5A0CC758BF2978B068054311 \
-       ED9BDF7AD6A55E232E84524257FF9BDBCC301009 \
+       152812300785C96444D3334D17565732E08E5E41 \
        28E72909F1717FE9607754F8A7BEB2621678D37D \
-       79D00BAC68B56D422F945A8F8E3A8F3247DBCBBF \
+       616516B8EB6ED02882FC4A7A8ADCB558C4F33D65 \
+       637DB1E23370F84AFF88CCE03152347D07DA627C \
+       6A8F9C266528E25AEB1D7731C2371D91CB716EA7 \
+       C060A6635913D98A3587D7DB1C2491FFEB0EF770 \
+       CFB16E21C950F67FA95E558F2EEB9F5CC09526C1 \
+       D1DBF2C4B96F2DEBF4C16654410108112E7EA81F \
+       ED9BDF7AD6A55E232E84524257FF9BDBCC301009 \
+       F19F5FF2B0589EC341220045BA03F4DBE0C63FB4 \
+       F2CFC4ABD0B99D837EEBB7D09B79B45691DB4173 \
+       F4FC70F07310028424EFC20A8E4256593F177720 \
   ; do \
     gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key" || \
+    gpg --batch --keyserver hkps://api.protonmail.ch --recv-keys "$key" || \
     gpg --batch --keyserver keys.openpgp.org --recv-keys "$key" || \
     gpg --batch --keyserver keyserver.pgp.com --recv-keys "$key" || \
     gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
