--- a/25/alpine/Dockerfile
+++ b/25/alpine/Dockerfile
@@ -122,6 +122,7 @@ ENV BITCOIN_DATA="/home/bitcoin/.bitcoin" \
     BITCOIN_PREFIX="/opt/bitcoin-${BITCOIN_VERSION}" \
     BITCOIN_UID=${UID} \
     BITCOIN_GID=${GID} \
+    I2P_SAM="" \
     TOR_SOCKSD="" \
     TOR_CTRLD=""
 
