--- a/27-knots/alpine/Dockerfile
+++ b/27-knots/alpine/Dockerfile
@@ -3,25 +3,28 @@ FROM --platform=${TARGETPLATFORM:-${BUILDPLATFORM}} alpine:3.22 as berkeleydb
 
 ARG TARGETPLATFORM
 
-RUN sed -i 's/http\:\/\/dl-cdn.alpinelinux.org/https\:\/\/alpine.global.ssl.fastly.net/g' /etc/apk/repositories \
-    && apk --no-cache add \
-         autoconf \
-         automake \
-         build-base \
-         libressl
-
 ENV BERKELEYDB_VERSION=db-4.8.30.NC
 ENV BERKELEYDB_PREFIX=/opt/${BERKELEYDB_VERSION}
 
-RUN     wget "https://download.oracle.com/berkeley-db/${BERKELEYDB_VERSION}.tar.gz" \
-    && tar -xzf *.tar.gz \
-    && sed 's/__atomic_compare_exchange/__atomic_compare_exchange_db/g' -i "${BERKELEYDB_VERSION}/dbinc/atomic.h" \
-    && mkdir -p "${BERKELEYDB_PREFIX}" \
-    && (    cd "/${BERKELEYDB_VERSION}/build_unix" \
-         && ../dist/configure --enable-cxx --disable-shared --with-pic --prefix="${BERKELEYDB_PREFIX}" CFLAGS="-Wno-error=implicit-function-declaration" \
-         && make -j$(nproc) \
-         && make install \
-         && rm -rf "${BERKELEYDB_PREFIX}/docs" )
+RUN [ "${TARGETPLATFORM#*/}" != "amd64" ] && \
+      printf "Skipping build of berkely-db as target architecture (%s) is not amd64. Only SQLite wallets will be supported.\n" "${TARGETPLATFORM#*/}" \
+    || { \
+         sed -i 's/http\:\/\/dl-cdn.alpinelinux.org/https\:\/\/alpine.global.ssl.fastly.net/g' /etc/apk/repositories \
+      && apk --no-cache add \
+           autoconf \
+           automake \
+           build-base \
+           libressl \
+      && wget "https://download.oracle.com/berkeley-db/${BERKELEYDB_VERSION}.tar.gz" \
+      && tar -xzf *.tar.gz \
+      && sed 's/__atomic_compare_exchange/__atomic_compare_exchange_db/g' -i "${BERKELEYDB_VERSION}/dbinc/atomic.h" \
+      && mkdir -p "${BERKELEYDB_PREFIX}" \
+      && (    cd "/${BERKELEYDB_VERSION}/build_unix" \
+           && ../dist/configure --enable-cxx --disable-shared --with-pic --prefix="${BERKELEYDB_PREFIX}" CFLAGS="-Wno-error=implicit-function-declaration" \
+           && make -j$(nproc) \
+           && make install \
+           && rm -rf "${BERKELEYDB_PREFIX}/docs" ); \
+    }
 
 # Build stage for Bitcoin Core
 FROM --platform=${TARGETPLATFORM:-${BUILDPLATFORM}} alpine:3.22 as bitcoin-knots
@@ -87,35 +90,38 @@ RUN    (    cd "/bitcoin-${BITCOIN_VERSION}" \
          && sed -i 's:sys/fcntl.h:fcntl.h:' src/compat/compat.h \
          && { [ -z "${REMOVEBRANDING}" ] || { \
                 patch -p1 < /tmp/0000-remove_branding.patch && \
-                  sed -i 's/\.knots20240801/\.0/' ./share/genbuild.sh; \
+                  sed -i "s/\.${BITCOIN_VERSION##*.}/\.0/" ./share/genbuild.sh; \
             }; } \
          && ./autogen.sh \
-         && ./configure LDFLAGS=-L`ls -d /opt/db*`/lib/ CPPFLAGS=-I`ls -d /opt/db*`/include/ \
+         && { [ "${TARGETPLATFORM#*/}" != "amd64" ] || BERKELEYDB_PREFIX=$(ls -d /opt/db*); } \
+         && ./configure $([ "${TARGETPLATFORM#*/}" != "amd64" ] || printf 'LDFLAGS=-L%s/lib/ CPPFLAGS=-I%s/include/' "${BERKELEYDB_PREFIX}" "${BERKELEYDB_PREFIX}") \
               --prefix="${BITCOIN_PREFIX}" \
-              --mandir=/usr/share/man \
               --disable-tests \
               --disable-bench \
               --disable-ccache \
               --disable-fuzz \
               --disable-fuzz-binary \
-              --enable-zmq \
+              --enable-cli \
+              --enable-external-signer \
+              --enable-util-cli \
+              --enable-util-tx \
+              --enable-util-wallet \
               --enable-wallet \
+              --enable-zmq \
               --without-gui \
               --without-qtdbus \
-              --with-berkdb \
+              $([ "${TARGETPLATFORM#*/}" != "amd64" ] || printf '--with-berkdb') \
               --with-boost-process \
               --with-daemon \
-              --with-external-signer \
               --with-libs \
               --with-sqlite \
               --with-utils \
          && make -j$(nproc) \
-         && make install \
-         && strip "${BITCOIN_PREFIX}/bin/bitcoin-cli" \
-         && strip "${BITCOIN_PREFIX}/bin/bitcoin-tx" \
-         && strip "${BITCOIN_PREFIX}/bin/bitcoind" \
+         && make install ) \
          && strip "${BITCOIN_PREFIX}/lib/libbitcoinconsensus.a" \
-         && strip "${BITCOIN_PREFIX}/lib/libbitcoinconsensus.so.0.0.0" )
+         && strip "${BITCOIN_PREFIX}/lib/libbitcoinconsensus.so.0.0.0" \
+         && ( for f in $(find ${BITCOIN_PREFIX}/bin/ -maxdepth 1 -mindepth 1 -type f -printf '%f\n'); do \
+                strip "${BITCOIN_PREFIX}/bin/${f}" || exit 1; done; )
 
 # Build stage for compiled artifacts
 FROM --platform=${TARGETPLATFORM:-${BUILDPLATFORM}} alpine:3.22
